unburden-home-dir (0.0.20120305) UNRELEASED; urgency=low

  * Uses consistently the basename "unburden-home-dir" instead of
    "unburden_home_dir".
    + Add Pre-Depends on dpkg >= 1.15.7.2 for usage of
      dpkg-maintscript-helper to rename conffiles.
  * Refactoring:
    + Use speaking variable names in fix_dangling_links() and do_it()
    + Reindent and reformat some overlong lines in bin/unburden-home-dir
    + Add semicolons on all return statements before block ends
  * Improve README
  * Add tmpreaper, eatmydata, agedu, bleachbit and some more comfortable
    "du"-like tools to "Suggests".
  * Remove corekeeper from Suggests but keep it in the man page's SEE ALSO
    section.
  * Update man page
    + Split EXAMPLES and SEE ALSO
    + Update SEE ALSO
    + Typeset em dash properly
  * Add a further use case to the long description and README. (Thanks
    Pietro Abate!) Rewrite parts of the use cases section in both files.
  * Bump Standards-Version to 3.9.3 (no changes)
  * Make Xsession.d snippet POSIX-compatible (Thanks Carsten Hey!)
  * Fix lintian warning helper-templates-in-copyright
  * Update copyright years in debian/copyright
  * Fix indentation in Xsession.d snippet and debian/copyright

 -- Axel Beckert <abe@debian.org>  Fri, 04 May 2012 19:57:03 +0200

unburden-home-dir (0.0.20110203) experimental; urgency=low

  * Fix bug when moving stuff and the target directory already exists. Use
    File::Rsync for that and add proper dependency to libfile-rsync-perl
    for that.
  * Fix bug where only the parent of an empty target directory has been
    created.
  * Reduce probability of false positives when looking for issues in the
    logs.
  * Add two more common cases to the example configuration:
    .conkeror[...]/Cache.Trash and .mozilla/default/[...]/Cache

 -- Axel Beckert <abe@debian.org>  Thu, 03 Feb 2011 20:12:56 +0100

unburden-home-dir (0.0.20110201) experimental; urgency=low

  * Rewritten in Perl.
  * Includes a test suite