@@ -4,6 +4,7 @@ unburden-home-dir (0.0.20120305) UNRELEASED; urgency=low
     "unburden_home_dir".
     + Add Pre-Depends on dpkg >= 1.15.7.2 for usage of
       dpkg-maintscript-helper to rename conffiles.
+  * Add test for Xsession.d snippet
   * Refactoring:
     + Use speaking variable names in fix_dangling_links() and do_it()
     + Reindent and reformat some overlong lines in bin/unburden-home-dir
